# Transaction-Classifier

./: .gitignore  README.md  pyproject.toml
Research Documents/: Archive.md  P2_Research_Architecture.md  P7_Research.md  P8_Research_RRF.md  Phase10_CategoryMapping_Architecture.md  Phase2_Architecture_Research.md  Phase7_Deep_Research.md  Phase8_RRF_Architecture.md  Phase8_RetrieveRerank_Architecture.md  Phase9_TokenAnalysis_Architecture.md  Research.md
Research Notes/: P10_Analysis_Results.md  P11_EnrichedRetraining_Results.md  P12_ML_Analysis.md  P12_Solutions_Research.md  P1_1_Training_Results.md  P1_2_Test_Results.md  P2_OCR_Evaluation_Results.md  P2_Training_Results.md  P5_Corpus_Evaluation.md  P6_Results.md  P6_Root_Plan.md  P7_RAG_Results.md  P8_FullStore_Results.md  P9_Rules_Token_Pipeline_Results.md  Phase10_Analysis_Results.md  Phase1_RealData_Results.md  Phase2_OCR_Evaluation_Results.md  Phase2_Training_Results.md  Phase3_SetFit_Results.md  Phase4_FineTune_Results.md  Phase5_Corpus_Evaluation.md  Phase6_Results.md  Phase6_Root_Plan.md  Phase7_ExternalKnowledgeDB_Results.md  Phase7_ExternalKnowledge_Results.md  Phase8_FullStore_Results.md  Phase9_RulesOverhaul_TokenPipeline_Results.md  Training_Results_1.md
scripts/: build_external_merchant_kb.py  build_full_merchant_knowledge_store.py  build_merchant_retrieval_index.py  download_data.py  evaluate.py  evaluate_finetune_real.py  evaluate_phase6.py  evaluate_real_ocr.py  evaluate_setfit_real.py  extract_and_evaluate_full.py  extract_bank_pdfs.py  extract_descriptions_ocr.py  label_real_data.py  train_canine.py  (+7 more)
(+24 files in other folders)
